Small updates to File and Folder Views
